--- a/app/views/events/event_tracks/_show_modal.html.haml
+++ b/app/views/events/event_tracks/_show_modal.html.haml
@@ -37,6 +37,7 @@
       %hr
       .modal-actions
         .modal-actions__left
-          = delete_event_track_link(@event_track, @display_raw_results)
+          - if policy(@event_track.event).update?
+            = delete_event_track_link(@event_track, @display_raw_results)
         .modal-actions__right
           %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
