--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -1,32 +1,5 @@
 .container
-  .row
-    .col-sm-12
-      .place-map-wrapper
-        .place-map
-          %img{src: "https://maps.googleapis.com/maps/api/staticmap?center=#{@place.latitude},#{@place.longitude}&zoom=12&size=600x150&scale=2&maptype=hybrid"}
-        .place-map-description
-          .place-map-background
-            %h1
-              = @place.name
-              %small
-                - if policy(@place).edit?
-                  |
-                  %a{href: edit_place_path(@place)}
-                    %i.fa.fa-pencil
-                  %a{href: place_path(@place), data: {method: 'delete', confirm: t('places.show.delete_confirmation')}}
-                    %i.fa.fa-times-circle
-                  |
-            %h4= "Lat: #{@place.latitude}, Lon: #{@place.longitude}, MSL: #{@place.msl}"
-
-  .place-navigation.top-buffer
-    .tabs-navbar
-      %ul.tabs-navbar__menu
-        %li.tabs-navbar__menuitem{class: 'tabs-navbar--active'}
-          = link_to t('general.overview'), @place
-
-        - if @place.base?
-          %li.tabs-navbar__menuitem
-            = link_to t('flight_profiles'), place_flight_profiles_path(@place)
+  = render 'places/header'
 
   .content-block
     - pilots = @place.pilots_accessible_by(current_user)
