--- a/app/views/places/finish_lines/index.html.haml
+++ b/app/views/places/finish_lines/index.html.haml
@@ -12,4 +12,4 @@
         .tr
           .th Name
       .tbody
-        = render @finish_lines
+        = render collection: @finish_lines, partial: 'places/finish_lines/finish_line'
