--- a/app/views/places/finish_lines/_form.html.haml
+++ b/app/views/places/finish_lines/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@place, @finish_line], remote: true, html: { class: 'form-horizontal' } do |f|
+= form_for @finish_line, remote: true, html: { class: 'form-horizontal' } do |f|
   .form-group
     .col-sm-6
       = f.text_field :name, class: 'form-control'
