--- a/app/views/tracks/results/_show_modal.html.haml
+++ b/app/views/tracks/results/_show_modal.html.haml
@@ -47,9 +47,9 @@
               = t('units.t_unit')
             %span
               = "(#{t('tracks.show.window')} #{@track.time.range_from} - #{@track.time.range_to})"
-      - if @track.virtual_comp_results.any?
+      - if @track.virtual_competition_results.any?
         %h3= t('tracks.show.online_comp_results')
-        - @track.virtual_comp_results.each do |result|
+        - @track.virtual_competition_results.each do |result|
           .track-online-result
             - competition = result.virtual_competition
             %a{href: virtual_competition_path(competition)}
