--- a/app/views/places/form/_exit_measurements.html.haml
+++ b/app/views/places/form/_exit_measurements.html.haml
@@ -1,2 +1,2 @@
-= form.fields_for :exit_measurements, include_id: false do |measurement_form|
+= form.fields_for :measurements, include_id: false do |measurement_form|
   = render 'places/form/exit_measurement_fields', form: measurement_form
