--- a/app/views/events/sections/_edit_section_controls.html.haml
+++ b/app/views/events/sections/_edit_section_controls.html.haml
@@ -1,15 +1,15 @@
-= edit_section_link(@event, section, @display_raw_results)
+= edit_section_link(@event, section)
 
 - if @event.sections.many?
   %span.pipe-edit-section.text-muted
     |
 
   - unless section.first_position?
-    = move_section_upper_button(@event, section, @display_raw_results)
+    = move_section_upper_button(@event, section)
   - unless section.last_position?
-    = move_section_lower_button(@event, section, @display_raw_results)
+    = move_section_lower_button(@event, section)
 
   %span.pipe-edit-section.text-muted
     |
 
-= delete_section_button(@event, section, @display_raw_results)
+= delete_section_button(@event, section)
