--- a/app/views/events/event_tracks/_form_modal.html.haml
+++ b/app/views/events/event_tracks/_form_modal.html.haml
@@ -1,7 +1,8 @@
 .modal-dialog
   .modal-content
     = form_for [@event, @event_track], remote: true, html: {multipart:true, class: 'form-horizontal'} do |f|
-      = hidden_field_tag :display_raw_results, @display_raw_results
+      = display_event_form_params
+
       .modal-header
         %button.close{type: 'button', data: {dismiss: 'modal'}}
           %span{aria: {hidden: 'true'}}
@@ -58,7 +59,7 @@
           .pull-left
             = link_to t('general.delete'),
                         [@event, @event_track],
-                        'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
+                        'data-params': display_event_params.to_param,
                         method: :DELETE,
                         remote: true,
                         class: 'btn btn-danger'
