--- a/app/views/events/event_tracks/penalties/_modal.html.haml
+++ b/app/views/events/event_tracks/penalties/_modal.html.haml
@@ -40,7 +40,7 @@
           %hr
           .modal-actions
             .modal-actions__left
-              = delete_event_track_link(@event_track, @display_raw_results)
+              = delete_event_track_link(@event_track)
 
             .modal-actions__right
               = f.submit t('general.save'), class: 'btn btn-primary'
