--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -10,25 +10,19 @@
 
       .col-md-2
         - if can_manage
-          .pull-right
-            = link_to(edit_event_path(@event),
-              remote: true,
-              'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
-              class: 'btn btn-default edit-event') do
-              %i.fa.fa-fw.fa-pencil.text-muted
-              = t('general.edit')
+          .pull-right= edit_event_link(@event)
 
     .row{class: ('top-buffer' if can_manage)}
       .col-md-6.col-sm-6
         - if can_manage && !@event.finished?
-          = new_section_link(@event, @display_raw_results)
-          = new_competitor_link(@event, @display_raw_results)
+          = new_section_link(@event)
+          = new_competitor_link(@event)
 
           - if @event.hungary_boogie?
             = button_to event_rounds_path(@event),
                         method: :post,
                         remote: true,
-                        params: {'round[discipline]' => :distance, 'display_raw_results' => @display_raw_results},
+                        params: {'round[discipline]' => :distance}.merge(display_event_params),
                         class: 'btn btn-default' do
               %i.fa.fa-plus.text-muted
               = t('activerecord.models.round')
@@ -40,9 +34,9 @@
                 = t('activerecord.models.round')
                 %i.fa.fa-caret-down
               %ul.dropdown-menu.dropdown-menu-right{role: 'menu'}
-                %li= add_round_button(@event, :distance, @display_raw_results)
-                %li= add_round_button(@event, :speed, @display_raw_results)
-                %li= add_round_button(@event, :time, @display_raw_results)
+                %li= add_round_button(@event, :distance)
+                %li= add_round_button(@event, :speed)
+                %li= add_round_button(@event, :time)
 
       .col-md-6.col-sm-6
         .pull-right
@@ -93,16 +87,16 @@
       .col-md-12
         = render @scoreboard.template, can_manage: can_manage
 
-    - if @event.wind_cancellation
+    - if @scoreboard.wind_cancellation
       .row
         .col-md-12#event-wind-cancellation-caption
           %span
             = t('events.show.wind_cancellation_enabled')
           %span
             = t('events.show.results_showing')
-            - if (@display_raw_results)
+            - if (@scoreboard.display_raw_results?)
               = link_to t('events.show.results_adjusted_caption'),
-                        show_params.merge(display_raw_results: false),
+                        display_event_params.merge(display_raw_results: false),
                         remote: true
               \/
               %b= t('events.show.results_not_adjusted_caption')
@@ -110,7 +104,7 @@
               %b= t('events.show.results_adjusted_caption')
               \/
               = link_to t('events.show.results_not_adjusted_caption'),
-                        show_params.merge(display_raw_results: true),
+                        display_raw_results.merge(display_raw_results: true),
                         remote: true
 
     .row
