--- a/app/views/events/show.html+mobile.haml
+++ b/app/views/events/show.html+mobile.haml
@@ -16,4 +16,4 @@
         = "#{@event.range_from} – #{@event.range_to} #{t('units.m')}"
   .event__scoreboard
     .event__scoreboard-scroll
-      = render @scoreboard.template
+      = render @scoreboard
